[project]
name = "whitecapella_cmd"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "whitecapella1", email = "whitecapella@naver.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
